# lygia

./: .gitignore  .npmignore  .pnpmfile.cjs  CMakeLists.txt  CONTRIBUTE.md  CONTRIBUTE_WESL.md  COVERAGE.md  Cargo.toml  DESIGN.md  EXAMPLES.md  LICENSE  LICENSE.md  Lygia.asmdef  README.md  README_GLSL.md  README_METAL.md  README_WESL.md  README_WebGPU.md  biome.jsonc  build.rs  bundle.py  compat.msl  math.cuh  math.glsl  math.hlsl  math.msl  math.wgsl  math_compat.msl  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prune.py  sample.glsl  sample.hlsl  sample.wgsl  sampler.hlsl  sampler.msl  sampler.wgsl  sdf.glsl  sdf.hlsl  (+10 more)
.github/: FUNDING.yml
animation/: easing.glsl  easing.hlsl  easing.wgsl  spriteLoop.glsl  spriteLoop.hlsl  spriteLoop.wesl  spriteLoop.wgsl
color/: blend.glsl  blend.hlsl  blend.msl  blend.wgsl  brightnessContrast.glsl  brightnessContrast.hlsl  brightnessContrast.msl  brightnessContrast.wesl  brightnessMatrix.glsl  brightnessMatrix.hlsl  brightnessMatrix.msl  brightnessMatrix.wesl  brightnessMatrix.wgsl  checker.glsl  checker.hlsl  composite.glsl  composite.hlsl  composite.msl  composite.wgsl  compositing.msl  contrast.glsl  contrast.hlsl  contrast.msl  contrast.wesl  contrast.wgsl  contrastMatrix.glsl  contrastMatrix.hlsl  contrastMatrix.msl  contrastMatrix.wesl  contrastMatrix.wgsl  daltonize.glsl  daltonize.hlsl  daltonize.msl  daltonize.wgsl  desaturate.glsl  desaturate.hlsl  desaturate.msl  desaturate.wesl  desaturate.wgsl  distance.glsl  (+89 more)
distort/: barrel.glsl  barrel.hlsl  barrel.msl  barrel.wgsl  chromaAB.glsl  chromaAB.hlsl  chromaAB.msl  chromaAB.wgsl  displace.glsl  displace.wgsl  grain.glsl  grain.hlsl  grain.msl  grain.wgsl  pincushion.glsl  pincushion.msl  pincushion.wgsl  stretch.glsl  stretch.hlsl  stretch.msl  stretch.wgsl
draw/: aastep.glsl  aastep.hlsl  arrows.glsl  arrows.msl  arrows.wgsl  axis.glsl  axis.hlsl  axis.wgsl  bridge.glsl  bridge.hlsl  bridge.msl  bridge.wgsl  char.glsl  char.wgsl  circle.glsl  circle.hlsl  circle.msl  circle.wgsl  circleSDF.glsl  colorChecker.glsl  colorChecker.msl  colorChecker.wgsl  colorPicker.glsl  colorPicker.hlsl  colorPicker.wgsl  cross.glsl  cross.hlsl  crossSDF.glsl  digits.glsl  digits.hlsl  digits.msl  digits.wgsl  (+42 more)
(+2844 files in other folders)
